--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,12 +38,16 @@ dependencies {
     def room_version = '2.2.3'
     def retrofit_version = '2.7.1'
     def moshi_version = '1.9.2'
+    def recyclerview_version = "1.1.0"
     def glide_version = '4.11.0'
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation 'androidx.appcompat:appcompat:1.1.0'
-    implementation 'androidx.core:core-ktx:1.1.0'
+    implementation 'androidx.core:core-ktx:1.2.0'
+
+
+    implementation "androidx.recyclerview:recyclerview:$recyclerview_version"
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     implementation "androidx.lifecycle:lifecycle-extensions:$lifecycle_version"
